--- a/AITOEIC/android/build.gradle
+++ b/AITOEIC/android/build.gradle
@@ -8,6 +8,11 @@ buildscript {
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
     }
+    
+    configurations.all {   
+        resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+    } 
+
     repositories {
         google()
         mavenCentral()
@@ -19,6 +24,7 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+
 
 allprojects {
     repositories {
