--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -13,11 +13,14 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
+    "@react-native-firebase/database": "^13.0.1",
+    "@react-native-firebase/firestore": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "firebase": "^9.5.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-elements": "^3.4.2",
