--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^13.0.1",
     "@react-native-firebase/database": "^13.0.1",
     "@react-native-firebase/firestore": "^13.0.1",
+    "@react-native-firebase/storage": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
