--- a/AITOEIC/ios/Podfile
+++ b/AITOEIC/ios/Podfile
@@ -12,6 +12,8 @@ target 'AITOEIC' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'AITOEICTests' do
     inherit! :complete
     # Pods for testing
