--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
@@ -26,10 +27,15 @@
     "react-native": "0.66.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^13.0.0",
+    "react-native-modalize": "^2.0.12",
+    "react-native-navigation": "^7.23.1-hotfix.1",
     "react-native-paper": "^4.10.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-sound": "^0.11.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
