--- a/AITOEIC/android/settings.gradle
+++ b/AITOEIC/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'AITOEIC'
+include ':react-native-sound'
+project(':react-native-sound').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sound/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 include ':react-native-vector-icons'
