--- a/AITOEIC/ios/Podfile
+++ b/AITOEIC/ios/Podfile
@@ -14,6 +14,8 @@ target 'AITOEIC' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNSound', :path => '../node_modules/react-native-sound'
+
   target 'AITOEICTests' do
     inherit! :complete
     # Pods for testing
