--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/storage": "^13.0.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
@@ -29,12 +30,14 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.12",
+    "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.10.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-sound": "^0.11.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
