--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -38,6 +38,7 @@
     "react-native-sound": "^0.11.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
