update scr1.js add audio
5/12/2021

--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -26,10 +26,12 @@
     "firebase": "^9.5.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-awesome-alerts": "^1.5.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.12",
+    "react-native-orientation-loading-overlay": "^0.1.6",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.10.0",
     "react-native-reanimated": "^2.2.4",
