--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -2,6 +2,11 @@
   "name": "AITOEIC",
   "version": "0.0.1",
   "private": true,
+  "rnpm": {
+    "assets": [
+      ".app/assets/fonts/"
+    ]
+  },
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,6 +15,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@freakycoder/react-native-helpers": "^1.0.2",
+    "@freakycoder/react-native-material-textfield": "^1.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^13.0.1",
@@ -30,6 +37,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-login-screen": "^2.1.4",
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.12",
     "react-native-orientation-loading-overlay": "^0.1.6",
@@ -39,6 +47,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-sound": "^0.11.1",
+    "react-native-spinkit": "^1.5.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.1",
