--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -47,6 +47,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-sound": "^0.11.1",
+    "react-native-sound-player": "^0.11.1",
     "react-native-spinkit": "^1.5.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
