--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -19,6 +19,7 @@
     "@freakycoder/react-native-material-textfield": "^1.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "^4.1.12",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/auth": "^13.0.1",
     "@react-native-firebase/database": "^13.0.1",
