update AI SPEAK
25/12/2021

--- a/AITOEIC/android/app/build.gradle
+++ b/AITOEIC/android/app/build.gradle
@@ -196,6 +196,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-config')
     compile project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
