--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@freakycoder/react-native-helpers": "^1.0.2",
     "@freakycoder/react-native-material-textfield": "^1.0.0",
+    "@google-cloud/text-to-speech": "^3.4.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.1.12",
@@ -32,10 +33,13 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "firebase": "^9.5.0",
+    "link": "^0.1.5",
     "react": "17.0.2",
-    "react-native": "0.66.3",
+    "react-native": "^0.66.3",
     "react-native-awesome-alerts": "^1.5.2",
+    "react-native-config": "^1.4.5",
     "react-native-elements": "^3.4.2",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-login-screen": "^2.1.4",
