--- a/AITOEIC/android/app/build.gradle
+++ b/AITOEIC/android/app/build.gradle
@@ -196,7 +196,7 @@ android {
 }
 
 dependencies {
-    
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.1'
     implementation project(':react-native-config')
     compile project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
