--- a/AITOEIC/android/app/src/main/AndroidManifest.xml
+++ b/AITOEIC/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+      android:name="com.google.mlkit.vision.DEPENDENCIES"
+      android:value="ocr" />
+      <meta-data
+      android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+      android:value="ocr" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
