--- a/AITOEIC/package.json
+++ b/AITOEIC/package.json
@@ -42,6 +42,7 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-picker": "^4.6.0",
     "react-native-login-screen": "^2.1.4",
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.12",
@@ -57,6 +58,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.1.1",
     "react-native-table-component": "^1.2.1",
+    "react-native-text-recognition": "^1.0.0",
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.15.0"
